{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 208,
  "lineage": "1f702f53-2940-0646-23d1-6396a10f3964",
  "resources": [
    {
      "module": "module.kubernetes.module.gcp_gke[0]",
      "mode": "data",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/terraformproject-464104/global/networks/multicloud-dev-vpc",
            "name": "multicloud-dev-vpc",
            "network_id": 5971548868719985712,
            "numeric_id": "5971548868719985712",
            "project": "terraformproject-464104",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/global/networks/multicloud-dev-vpc",
            "subnetworks_self_links": [
              "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-private-3",
              "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-public-1",
              "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-public-3",
              "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-private-1",
              "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-public-2",
              "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-private-2"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.kubernetes.module.gcp_gke[0]",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.0.1.1",
            "id": "projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-private-1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "multicloud-dev-vpc-private-1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/global/networks/multicloud-dev-vpc",
            "private_ip_google_access": true,
            "project": "terraformproject-464104",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.0.160.0/20",
                "range_name": "gke-pods"
              },
              {
                "ip_cidr_range": "10.0.200.0/24",
                "range_name": "gke-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-private-1",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2666464031416566786
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.load_balancer.module.gcp_lb[0]",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.120.48.67",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-06-26T10:09:48.459-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/terraformproject-464104/global/addresses/multicloud-dev-gke-lb-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "multicloud-dev-gke-lb-ip",
            "prefix_length": 0,
            "project": "terraformproject-464104",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/global/addresses/multicloud-dev-gke-lb-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.kubernetes.module.aws_eks.module.eks.aws_cloudwatch_log_group.this",
            "module.kubernetes.module.aws_eks.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.kubernetes.module.aws_eks.module.eks.aws_eks_access_entry.this",
            "module.kubernetes.module.aws_eks.module.eks.aws_eks_access_policy_association.this",
            "module.kubernetes.module.aws_eks.module.eks.aws_eks_addon.before_compute",
            "module.kubernetes.module.aws_eks.module.eks.aws_eks_addon.this",
            "module.kubernetes.module.aws_eks.module.eks.aws_eks_cluster.this",
            "module.kubernetes.module.aws_eks.module.eks.aws_eks_identity_provider_config.this",
            "module.kubernetes.module.aws_eks.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.kubernetes.module.aws_eks.module.eks.aws_iam_policy.cluster_encryption",
            "module.kubernetes.module.aws_eks.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.kubernetes.module.aws_eks.module.eks.aws_iam_policy.custom",
            "module.kubernetes.module.aws_eks.module.eks.aws_iam_role.eks_auto",
            "module.kubernetes.module.aws_eks.module.eks.aws_iam_role.this",
            "module.kubernetes.module.aws_eks.module.eks.aws_iam_role_policy_attachment.additional",
            "module.kubernetes.module.aws_eks.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.kubernetes.module.aws_eks.module.eks.aws_iam_role_policy_attachment.custom",
            "module.kubernetes.module.aws_eks.module.eks.aws_iam_role_policy_attachment.eks_auto",
            "module.kubernetes.module.aws_eks.module.eks.aws_iam_role_policy_attachment.eks_auto_additional",
            "module.kubernetes.module.aws_eks.module.eks.aws_iam_role_policy_attachment.this",
            "module.kubernetes.module.aws_eks.module.eks.aws_security_group.cluster",
            "module.kubernetes.module.aws_eks.module.eks.aws_security_group.node",
            "module.kubernetes.module.aws_eks.module.eks.aws_security_group_rule.cluster",
            "module.kubernetes.module.aws_eks.module.eks.aws_security_group_rule.node",
            "module.kubernetes.module.aws_eks.module.eks.data.aws_caller_identity.current",
            "module.kubernetes.module.aws_eks.module.eks.data.aws_eks_addon_version.this",
            "module.kubernetes.module.aws_eks.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.kubernetes.module.aws_eks.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.kubernetes.module.aws_eks.module.eks.data.aws_iam_policy_document.custom",
            "module.kubernetes.module.aws_eks.module.eks.data.aws_iam_policy_document.node_assume_role_policy",
            "module.kubernetes.module.aws_eks.module.eks.data.aws_iam_session_context.current",
            "module.kubernetes.module.aws_eks.module.eks.data.aws_partition.current",
            "module.kubernetes.module.aws_eks.module.eks.data.tls_certificate.this",
            "module.kubernetes.module.aws_eks.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.kubernetes.module.aws_eks.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.kubernetes.module.aws_eks.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.kubernetes.module.aws_eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy.this",
            "module.kubernetes.module.aws_eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.kubernetes.module.aws_eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.kubernetes.module.aws_eks.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.kubernetes.module.aws_eks.module.eks.module.eks_managed_node_group.aws_placement_group.this",
            "module.kubernetes.module.aws_eks.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.kubernetes.module.aws_eks.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type.this",
            "module.kubernetes.module.aws_eks.module.eks.module.eks_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.kubernetes.module.aws_eks.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.kubernetes.module.aws_eks.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.role",
            "module.kubernetes.module.aws_eks.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.kubernetes.module.aws_eks.module.eks.module.eks_managed_node_group.data.aws_ssm_parameter.ami",
            "module.kubernetes.module.aws_eks.module.eks.module.eks_managed_node_group.data.aws_subnets.placement_group",
            "module.kubernetes.module.aws_eks.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.kubernetes.module.aws_eks.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.kubernetes.module.aws_eks.module.eks.module.eks_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.kubernetes.module.aws_eks.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.kubernetes.module.aws_eks.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.kubernetes.module.aws_eks.module.eks.module.fargate_profile.aws_iam_role_policy.this",
            "module.kubernetes.module.aws_eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.kubernetes.module.aws_eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.kubernetes.module.aws_eks.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.kubernetes.module.aws_eks.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.kubernetes.module.aws_eks.module.eks.module.fargate_profile.data.aws_iam_policy_document.role",
            "module.kubernetes.module.aws_eks.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.kubernetes.module.aws_eks.module.eks.module.fargate_profile.data.aws_region.current",
            "module.kubernetes.module.aws_eks.module.eks.module.kms.aws_kms_alias.this",
            "module.kubernetes.module.aws_eks.module.eks.module.kms.aws_kms_external_key.this",
            "module.kubernetes.module.aws_eks.module.eks.module.kms.aws_kms_grant.this",
            "module.kubernetes.module.aws_eks.module.eks.module.kms.aws_kms_key.this",
            "module.kubernetes.module.aws_eks.module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.kubernetes.module.aws_eks.module.eks.module.kms.aws_kms_replica_key.this",
            "module.kubernetes.module.aws_eks.module.eks.module.kms.data.aws_caller_identity.current",
            "module.kubernetes.module.aws_eks.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.kubernetes.module.aws_eks.module.eks.module.kms.data.aws_partition.current",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.aws_eks_access_entry.this",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.aws_iam_role_policy.this",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.aws_placement_group.this",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type.this",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.data.aws_ec2_instance_type_offerings.this",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.role",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.data.aws_ssm_parameter.ami",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.data.aws_subnets.placement_group",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.al2023_eks_managed_node_group",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.kubernetes.module.aws_eks.module.eks.module.self_managed_node_group.module.user_data.null_resource.validate_cluster_service_cidr",
            "module.kubernetes.module.aws_eks.module.eks.time_sleep.this",
            "module.kubernetes.module.gcp_gke.data.google_client_config.default",
            "module.kubernetes.module.gcp_gke.data.google_compute_network.vpc",
            "module.kubernetes.module.gcp_gke.data.google_compute_subnetwork.private",
            "module.kubernetes.module.gcp_gke.google_container_cluster.primary",
            "module.kubernetes.module.gcp_gke.google_container_node_pool.primary_nodes",
            "module.kubernetes.module.gcp_gke.google_project_iam_member.node_sa_roles",
            "module.kubernetes.module.gcp_gke.google_service_account.node_sa",
            "module.network.module.aws_network.aws_vpc_endpoint.s3",
            "module.network.module.aws_network.aws_vpc_endpoint_route_table_association.s3_private",
            "module.network.module.aws_network.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.network.module.aws_network.module.vpc.aws_customer_gateway.this",
            "module.network.module.aws_network.module.vpc.aws_db_subnet_group.database",
            "module.network.module.aws_network.module.vpc.aws_default_network_acl.this",
            "module.network.module.aws_network.module.vpc.aws_default_route_table.default",
            "module.network.module.aws_network.module.vpc.aws_default_security_group.this",
            "module.network.module.aws_network.module.vpc.aws_default_vpc.this",
            "module.network.module.aws_network.module.vpc.aws_egress_only_internet_gateway.this",
            "module.network.module.aws_network.module.vpc.aws_eip.nat",
            "module.network.module.aws_network.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.network.module.aws_network.module.vpc.aws_flow_log.this",
            "module.network.module.aws_network.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.network.module.aws_network.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.network.module.aws_network.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.network.module.aws_network.module.vpc.aws_internet_gateway.this",
            "module.network.module.aws_network.module.vpc.aws_nat_gateway.this",
            "module.network.module.aws_network.module.vpc.aws_network_acl.database",
            "module.network.module.aws_network.module.vpc.aws_network_acl.elasticache",
            "module.network.module.aws_network.module.vpc.aws_network_acl.intra",
            "module.network.module.aws_network.module.vpc.aws_network_acl.outpost",
            "module.network.module.aws_network.module.vpc.aws_network_acl.private",
            "module.network.module.aws_network.module.vpc.aws_network_acl.public",
            "module.network.module.aws_network.module.vpc.aws_network_acl.redshift",
            "module.network.module.aws_network.module.vpc.aws_network_acl_rule.database_inbound",
            "module.network.module.aws_network.module.vpc.aws_network_acl_rule.database_outbound",
            "module.network.module.aws_network.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.network.module.aws_network.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.network.module.aws_network.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.network.module.aws_network.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.network.module.aws_network.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.network.module.aws_network.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.network.module.aws_network.module.vpc.aws_network_acl_rule.private_inbound",
            "module.network.module.aws_network.module.vpc.aws_network_acl_rule.private_outbound",
            "module.network.module.aws_network.module.vpc.aws_network_acl_rule.public_inbound",
            "module.network.module.aws_network.module.vpc.aws_network_acl_rule.public_outbound",
            "module.network.module.aws_network.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.network.module.aws_network.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.network.module.aws_network.module.vpc.aws_redshift_subnet_group.redshift",
            "module.network.module.aws_network.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.network.module.aws_network.module.vpc.aws_route.database_internet_gateway",
            "module.network.module.aws_network.module.vpc.aws_route.database_ipv6_egress",
            "module.network.module.aws_network.module.vpc.aws_route.database_nat_gateway",
            "module.network.module.aws_network.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.network.module.aws_network.module.vpc.aws_route.private_ipv6_egress",
            "module.network.module.aws_network.module.vpc.aws_route.private_nat_gateway",
            "module.network.module.aws_network.module.vpc.aws_route.public_internet_gateway",
            "module.network.module.aws_network.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.network.module.aws_network.module.vpc.aws_route_table.database",
            "module.network.module.aws_network.module.vpc.aws_route_table.elasticache",
            "module.network.module.aws_network.module.vpc.aws_route_table.intra",
            "module.network.module.aws_network.module.vpc.aws_route_table.private",
            "module.network.module.aws_network.module.vpc.aws_route_table.public",
            "module.network.module.aws_network.module.vpc.aws_route_table.redshift",
            "module.network.module.aws_network.module.vpc.aws_route_table_association.database",
            "module.network.module.aws_network.module.vpc.aws_route_table_association.elasticache",
            "module.network.module.aws_network.module.vpc.aws_route_table_association.intra",
            "module.network.module.aws_network.module.vpc.aws_route_table_association.outpost",
            "module.network.module.aws_network.module.vpc.aws_route_table_association.private",
            "module.network.module.aws_network.module.vpc.aws_route_table_association.public",
            "module.network.module.aws_network.module.vpc.aws_route_table_association.redshift",
            "module.network.module.aws_network.module.vpc.aws_route_table_association.redshift_public",
            "module.network.module.aws_network.module.vpc.aws_subnet.database",
            "module.network.module.aws_network.module.vpc.aws_subnet.elasticache",
            "module.network.module.aws_network.module.vpc.aws_subnet.intra",
            "module.network.module.aws_network.module.vpc.aws_subnet.outpost",
            "module.network.module.aws_network.module.vpc.aws_subnet.private",
            "module.network.module.aws_network.module.vpc.aws_subnet.public",
            "module.network.module.aws_network.module.vpc.aws_subnet.redshift",
            "module.network.module.aws_network.module.vpc.aws_vpc.this",
            "module.network.module.aws_network.module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.network.module.aws_network.module.vpc.aws_vpc_block_public_access_options.this",
            "module.network.module.aws_network.module.vpc.aws_vpc_dhcp_options.this",
            "module.network.module.aws_network.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.network.module.aws_network.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.network.module.aws_network.module.vpc.aws_vpn_gateway.this",
            "module.network.module.aws_network.module.vpc.aws_vpn_gateway_attachment.this",
            "module.network.module.aws_network.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.network.module.aws_network.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.network.module.aws_network.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.network.module.aws_network.module.vpc.data.aws_caller_identity.current",
            "module.network.module.aws_network.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.network.module.aws_network.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.network.module.aws_network.module.vpc.data.aws_partition.current",
            "module.network.module.aws_network.module.vpc.data.aws_region.current",
            "module.network.module.gcp_network.google_compute_firewall.allow_health_checks",
            "module.network.module.gcp_network.google_compute_firewall.allow_internal",
            "module.network.module.gcp_network.google_compute_network.vpc",
            "module.network.module.gcp_network.google_compute_router.router",
            "module.network.module.gcp_network.google_compute_router_nat.nat",
            "module.network.module.gcp_network.google_compute_subnetwork.private",
            "module.network.module.gcp_network.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.gcp_network[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_checks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-06-26T09:52:59.967-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraformproject-464104/global/firewalls/multicloud-dev-vpc-allow-health-checks",
            "log_config": [],
            "name": "multicloud-dev-vpc-allow-health-checks",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/global/networks/multicloud-dev-vpc",
            "priority": 1000,
            "project": "terraformproject-464104",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/global/firewalls/multicloud-dev-vpc-allow-health-checks",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gke-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.gcp_network.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.gcp_network[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-06-26T09:53:00.565-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraformproject-464104/global/firewalls/multicloud-dev-vpc-allow-internal",
            "log_config": [],
            "name": "multicloud-dev-vpc-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/global/networks/multicloud-dev-vpc",
            "priority": 1000,
            "project": "terraformproject-464104",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/global/firewalls/multicloud-dev-vpc-allow-internal",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.gcp_network.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.gcp_network[0]",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraformproject-464104/global/networks/multicloud-dev-vpc",
            "mtu": 0,
            "name": "multicloud-dev-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "5971548868719985712",
            "numeric_id": "5971548868719985712",
            "project": "terraformproject-464104",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/global/networks/multicloud-dev-vpc"
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.gcp_network[0]",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-26T09:53:00.795-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/terraformproject-464104/regions/us-central1/routers/multicloud-dev-vpc-router",
            "name": "multicloud-dev-vpc-router",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/global/networks/multicloud-dev-vpc",
            "project": "terraformproject-464104",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/regions/us-central1/routers/multicloud-dev-vpc-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.gcp_network.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.gcp_network[0]",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "terraformproject-464104/us-central1/multicloud-dev-vpc-router/multicloud-dev-vpc-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "multicloud-dev-vpc-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "terraformproject-464104",
            "region": "us-central1",
            "router": "multicloud-dev-vpc-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-private-1",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              },
              {
                "name": "projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-private-2",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              },
              {
                "name": "projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-private-3",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.gcp_network.google_compute_network.vpc",
            "module.network.module.gcp_network.google_compute_router.router",
            "module.network.module.gcp_network.google_compute_subnetwork.private"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.gcp_network[0]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-26T09:53:01.160-07:00",
            "enable_flow_logs": true,
            "gateway_address": "10.0.1.1",
            "id": "projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-private-1",
            "ip_cidr_range": "10.0.1.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "multicloud-dev-vpc-private-1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/global/networks/multicloud-dev-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraformproject-464104",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.0.160.0/20",
                "range_name": "gke-pods"
              },
              {
                "ip_cidr_range": "10.0.200.0/24",
                "range_name": "gke-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-private-1",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2666464031416566786
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.gcp_network.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-26T09:53:01.402-07:00",
            "enable_flow_logs": true,
            "gateway_address": "10.0.2.1",
            "id": "projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-private-2",
            "ip_cidr_range": "10.0.2.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "multicloud-dev-vpc-private-2",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/global/networks/multicloud-dev-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraformproject-464104",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-private-2",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 809425180281586690
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.gcp_network.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-26T09:53:01.312-07:00",
            "enable_flow_logs": true,
            "gateway_address": "10.0.3.1",
            "id": "projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-private-3",
            "ip_cidr_range": "10.0.3.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "multicloud-dev-vpc-private-3",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/global/networks/multicloud-dev-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraformproject-464104",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-private-3",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 4191369007102739458
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.gcp_network.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network.module.gcp_network[0]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-26T09:53:00.804-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.101.1",
            "id": "projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-public-1",
            "ip_cidr_range": "10.0.101.0/24",
            "name": "multicloud-dev-vpc-public-1",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/global/networks/multicloud-dev-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraformproject-464104",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-public-1",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2713847815728055299
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.gcp_network.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-26T09:53:01.320-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.102.1",
            "id": "projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-public-2",
            "ip_cidr_range": "10.0.102.0/24",
            "name": "multicloud-dev-vpc-public-2",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/global/networks/multicloud-dev-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraformproject-464104",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-public-2",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 2848940608954876930
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.gcp_network.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-06-26T09:53:01.305-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.103.1",
            "id": "projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-public-3",
            "ip_cidr_range": "10.0.103.0/24",
            "name": "multicloud-dev-vpc-public-3",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/global/networks/multicloud-dev-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "terraformproject-464104",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformproject-464104/regions/us-central1/subnetworks/multicloud-dev-vpc-public-3",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 1902338853527667714
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.module.gcp_network.google_compute_network.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}